tests/baselines/reference/defineProperty(strict=true,target=esnext).errors.txt
defineProperty.ts(3,14): error TS2729: Property 'y' is used before its initialization.
defineProperty.ts(4,5): error TS7008: Member 'b' implicitly has an 'any' type.
defineProperty.ts(5,12): error TS7008: Member 'c' implicitly has an 'any' type.
defineProperty.ts(10,14): error TS2729: Property 'y' is used before its initialization.
defineProperty.ts(11,13): error TS7008: Member 'notEmitted' implicitly has an 'any' type.
defineProperty.ts(14,12): error TS7008: Member 'a' implicitly has an 'any' type.
defineProperty.ts(18,14): error TS2729: Property 'ka' is used before its initialization.
defineProperty.ts(22,15): error TS2729: Property 'ka' is used before its initialization.


==== defineProperty.ts (8 errors) ====
    var x: "p" = "p"
    class A {
        a = this.y
                 ~
!!! error TS2729: Property 'y' is used before its initialization.
!!! related TS2728 defineProperty.ts:9:17: 'y' is declared here.
        b
        ~
!!! error TS7008: Member 'b' implicitly has an 'any' type.
        public c;
               ~
!!! error TS7008: Member 'c' implicitly has an 'any' type.
        ["computed"] = 13
        ;[x] = 14
        m() { }
        constructor(public readonly y: number) { }
        z = this.y
                 ~
!!! error TS2729: Property 'y' is used before its initialization.
!!! related TS2728 defineProperty.ts:9:17: 'y' is declared here.
        declare notEmitted;
                ~~~~~~~~~~
!!! error TS7008: Member 'notEmitted' implicitly has an 'any' type.
    }
    class B {
        public a;
               ~
!!! error TS7008: Member 'a' implicitly has an 'any' type.
    }
    class C extends B {
        declare public a;
        z = this.ka
                 ~~
!!! error TS2729: Property 'ka' is used before its initialization.
!!! related TS2728 defineProperty.ts:19:17: 'ka' is declared here.
        constructor(public ka: number) {
            super()
        }
        ki = this.ka
                  ~~
!!! error TS2729: Property 'ka' is used before its initialization.
!!! related TS2728 defineProperty.ts:19:17: 'ka' is declared here.
    }
    